changed wine description font size and line height to prevent lower text from being cut off

--- a/src/pages/home/components/WineDesc.css
+++ b/src/pages/home/components/WineDesc.css
@@ -48,7 +48,7 @@
 
   .wine-desc > div {
     padding-top: .5rem;
-    font-size: .9rem;
-    line-height: 1.8rem;
+    font-size: .8rem;
+    line-height: 1.7rem;
   }
 }
